# test_repo

./: README.md  app.py  auth.py  ctran2.sh  download_tags.sh  media_data.db  pyproject.toml  requirements.txt  run.sh  torch.sh  workers.py
log_dir/: hf.py
mqtt/: sub.py
ssl_keys/: cert.pem  key.pem
static/: scripts.js  styles.css
templates/: index.html  layout.html  login.html
test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
