[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi", "langchain", "librosa", "langchain_core" , "numpy" , "ffmpeg-python"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi", "langchain", "librosa", "langchain_core" , "numpy" , "ffmpeg-python"]
exclude = ["temp", "static", "log_dir", "ssl_keys", "templates", "downloaded_media" ,"tts", "mqt"]
namespaces = false
